// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer aligns bottom 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="bottom-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw fWeHdr"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns bottom 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .bdAanV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bdAanV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .fWeHdr {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .fWeHdr {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;

exports[`Layer aligns left 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="left-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw bjlfkC"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns left 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;

exports[`Layer aligns right 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="right-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw ZwLNV"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns right 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;

exports[`Layer aligns top 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="top-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw bdAanV"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns top 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .bdAanV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bdAanV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;

exports[`Layer full margin renders 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="full-margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw ctOrcq"
  >
    This is a full layer with margin
  </div>
</div>
`;

exports[`Layer full margin renders 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (min-width:700px) {
  .jNReQX {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .bdAanV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bdAanV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .fWeHdr {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .fWeHdr {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .eBaMuM {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .eBaMuM {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .eOmLop {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .eOmLop {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: none;
    bottom: 50%;
    right: 50%;
    -webkit-animation: ghNyyk 0.1s forwards;
    animation: ghNyyk 0.1s forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ctOrcq {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ctOrcq {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    height: calc(100vh - 96px);
    width: calc(100vw - 96px);
    margin: 48px;
  }
}"
`;

exports[`Layer hides 1`] = `
<div
  class="StyledLayer-ceZzeh gVCohQ"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw eBaMuM"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer hides 2`] = `
"

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

.gVCohQ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .bdAanV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bdAanV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .fWeHdr {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .fWeHdr {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .eBaMuM {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .eBaMuM {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;

exports[`Layer hides 3`] = `
<div
  class="StyledLayer-ceZzeh gVCohQ"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw eBaMuM"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer hides 4`] = `
"

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

.gVCohQ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .bdAanV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bdAanV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .fWeHdr {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .fWeHdr {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .eBaMuM {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .eBaMuM {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;

exports[`Layer is accessible 1`] = `
<div
  id="body-node"
>
  <input
    tabindex="-1"
  />
  <input
    tabindex="-1"
    data-g-tabindex="10"
  />
</div>
`;

exports[`Layer is accessible 2`] = `
<div
  id="layer-node"
>
  This is a layer
  <input />
</div>
`;

exports[`Layer is accessible 3`] = `
<div
  id="body-node"
>
  <input />
  <input
    tabindex="10"
  />
</div>
`;

exports[`Layer plain renders 1`] = `
<div
  class="StyledLayer-ceZzeh jNReQX"
  id="plain-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw eOmLop"
  >
    This is a plain layer
  </div>
</div>
`;

exports[`Layer plain renders 2`] = `
"

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

.jNReQX {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: transparent;
}

@media only screen and (min-width:700px) {
  .jNReQX {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bjlfkC {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bjlfkC {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .ZwLNV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ZwLNV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .bdAanV {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bdAanV {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .fWeHdr {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .fWeHdr {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .eBaMuM {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .eBaMuM {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}

@media only screen and (max-width:699px) {
  .eOmLop {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .eOmLop {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: none;
    bottom: 50%;
    right: 50%;
    -webkit-animation: ghNyyk 0.1s forwards;
    animation: ghNyyk 0.1s forwards;
    -webkit-undefined: undefined;
    -ms-flex-undefined: undefined;
    undefined: undefined;
  }
}"
`;
